5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1595_1014.log
== TEST (2019-03-30 12:38:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalvendas=float(input("digite o total de vendas: "))
lucro=(totalvendas*(30/100))
print(round(lucro,2,Reais))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(lucro,2,Reais))
NameError: name 'Reais' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:38:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalvendas=float(input("digite o total de vendas: "))
lucro=(totalvendas*(30/100))
print(round(lucro,2,reais))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(lucro,2,reais))
NameError: name 'reais' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:39:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalvendas=float(input("digite o total de vendas: "))
lucro=(totalvendas*(30/100))
print(round(lucro,2))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:43:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
totalvendas=float(input("digite o total de vendas: "))
lucro=(totalvendas*(30/100))
print(round(lucro,2))
-- EXECUTION TIME:
0.124905
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
